--- a/templates/config.html
+++ b/templates/config.html
@@ -6,9 +6,9 @@
       </br><h2 class="form-signin-heading">Session Config</h2></br>
       <input class="form-control" name="loginurl" placeholder"Login URL" required="" autofocus="" /></br>
       <input class="form-control" name="usernameparameter" placeholder="Username Parameter" required="" autofocus="" /></br>
-      <input class="form-control" name="username" placeholder="Username" required="" autofocus="" /></br>
+      <input class="form-control" name="username" placeholder="Username" autofocus="" /></br>
       <input class="form-control" name="passwordparameter" placeholder=" Password Parameter" required=""/></br>       
-      <input type="password" class="form-control" name="password" placeholder="Password" required="" autofocus="" /></br>
+      <input type="password" class="form-control" name="password" placeholder="Password" autofocus="" /></br>
       <input class="form-control" name="csrfparam" placeholder=" Csrf Parameter" /></br>
       <button class="btn btn-lg btn-primary btn-block" type="submit">Submit</button> 
       <p style="color:red;">{{msg}}</p>  
