--- a/templates/project_detail.html
+++ b/templates/project_detail.html
@@ -72,7 +72,15 @@
               <div style="float:center;" class="dropdown">
                 <button class="btn btn-success" class="dropbtn">Other</button>
                 <div class="dropdown-content">
-                      <a style="background-color: bisque;"href="{{ url_for('profile')}}" class="nav-link">SQLI Scan</a>
+                      {% if request.sql != 'None'  %}
+                        {% if request.sql == 'Found' %}
+                          <a style="background-color: bisque;"class="nav-link"><a style="color:red" >SQL detected {{request.sql}}</a></a>
+                          {% else %}
+                          <a style="background-color: bisque;"class="nav-link" style="color:green" >SQL detected {{request.sql}}</a>
+                          {% endif %}
+                        {% else %}
+                        <a style="background-color: bisque;"href="{{ url_for('scan_sqlinjection',id= request.requestid)}}" class="nav-link">SQLI Scan</a>
+                      {% endif %}
                       <a style="background-color: bisque;"href="{{ url_for('changepwd')}}" class="nav-link">XSS Scan</a>
                       <a style="background-color: bisque;"href="{{ url_for('changepwd')}}" class="nav-link">RFI/LFI Scan</a>
                 </div>
