--- a/templates/add_project.html
+++ b/templates/add_project.html
@@ -40,8 +40,7 @@
             {% endfor %}
         </select>
     </div>
-    <div class="form-group" required="">
-        Login no required: <input value="0" name = "loginrequired" type="checkbox" ></br>
+    <div class="form-group" >
         Login required: <input value="1 "name = "loginrequired" type="checkbox" id="loginrequired" onclick="myFunction()"></br>
     </div>
     <div class="form-group">
