--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -23,7 +23,7 @@
 </div>
 <br>
 <div>
-  <h5> Vulnerabilities top 10</h5></br>
+  <h5> All vulnerabilities have been found</h5></br>
     <table class="table">
       <thead class="table-success">
         <tr>
