--- a/templates/add_project.html
+++ b/templates/add_project.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="form-group">
-        <input required="" type="text" name="target"
+        <input required="" type="url" name="target"
         placeholder="Target" class="form-control"
                value="{{ request.form['target'] }}"></input>
     </div>
