--- a/templates/show_project.html
+++ b/templates/show_project.html
@@ -3,7 +3,7 @@
     <center><h1>{% block title %}  Project List  {% endblock %}</h1></center>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/showuser.css') }}">
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/loading.css') }}">
-    {% if currentuser["role"] == "Project Manager" %}
+    {% if currentuser["role"] != "Pentester" %}
     <a href="{{ url_for('add_project')}}" class="btn btn-primary" style="float: right;" role="button" aria-pressed="true">Create Project</a>
     {% endif %}
   </br></br></br>
@@ -37,7 +37,6 @@
         <tbody>
           <p style="color:red;">{{msg}}</p>
         {% for project in projects %}
-        
           <tr >
             <th style="text-align: center" class="counterCell"></th>
             <th style="text-align: center"class="align-middle" scope="row"><a href="{{ url_for('project_detail',id= project.projectid) }} ">{{ project.projectname }}</a></th>
@@ -88,6 +87,63 @@
           </td>
           </tr>
         {% endfor %}
+        {% if currentuser["role"] == 'Administrator' %}
+          {% for project in allprojects %}
+          <tr >
+            <th style="text-align: center" class="counterCell"></th>
+            <th style="text-align: center"class="align-middle" scope="row"><a href="{{ url_for('project_detail',id= project.projectid) }} ">{{ project.projectname }}</a></th>
+            <td style="text-align: center"class="align-middle" >{{ project.startdate }}</td>
+            <td style="text-align: center"class="align-middle" >{{ project.enddate }}</td>
+            <td style="text-align: center"class="align-middle" >{{ project.target }}</a></td>
+            <td style="text-align: center"class="align-middle" >{{ project.manager }}</td>
+            <td style="text-align: center"class="align-middle" >{{ project.pentester }}</td>
+            <td style="text-align: center"class="align-middle" >{{ project.vunls }}</td>
+            <td style="text-align: center"class="align-middle" >{{ project.create_by }}</td>
+            <td style="text-align: center"class="align-middle" >{{ project.status }}</td>
+            {% if project.login == 1 %}
+            <td style="text-align: center"class="align-middle" >Yes</td>
+            {% else %}
+            <td style="text-align: center"class="align-middle" >No</td>
+            {% endif %}
+            <td>
+            {% if project.login == 1 %}
+              {% if project.isconfig == 0%}
+              <a style="text-align: center" href="{{ url_for('cookies_config',id= project.projectid) }}" class="btn btn-primary">Config Session</a>
+              {% else %}
+              <a style="text-align: center" href="{{ url_for('cookies_update',id= project.projectid) }}" class="btn btn-success">Update Session</a>
+              {% endif%} 
+            {% else %}
+            <a></a>
+            {% endif %}
+            </td>
+            <td style="text-align: center" class="align-middle" > 
+              <div style="float:center;" class="dropdown">
+                <button class="btn btn-success" class="dropbtn">Action</button>
+                <div class="dropdown-content">
+                  <a href="{{ url_for('editproject',id= project.projectid) }} "class="btn btn-primary">Edit</a>
+                  <a href="{{ url_for('deleteproject',id= project.projectid) }} "class="btn btn-danger">Delete</a>
+                </div>
+              </div>
+              </span>
+            </td>
+            <td style="text-align: center" class="align-middle" > 
+                      {% if project.isspider != 1 %}
+                      <a  style="text-align: center"class="btn btn-success" onclick="loadScreen({{project.projectid}})">spider</a>
+                      {% else %}
+                      <a class="btn btn-warning" style="background-color: bisque;" style="text-align: center" class="align-middle" > 
+                        have been spidered
+                      </a>
+                      {% endif %}           
+            </td>
+          
+          </td>
+          </tr>
+      {% endfor %}
+
+
+
+
+        {% endif %}
         </tbody>
       </table> 
     </div>
